--- a/Session1.html
+++ b/Session1.html
@@ -16,7 +16,7 @@
 
      //Task2
      //Display greeting message with alert box
-     //alert("Hi I'm Sakshi")
+     alert("Hi I'm Sakshi")
 
     
 
