--- a/session10.html
+++ b/session10.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sakshi Munde session10 Task</title>
-    <!-- <style>
+     <style>
 
          div{ width: 200px;
         height: 40px;
@@ -17,13 +17,13 @@
         }
         .c1{ text-align: center;
         }
-        </style> -->
+        </style> 
 </head>
 
     <!-- Task 29
     Write a Js Program Using Events to show a message that you are in a div if mouse is in div change the color of the div to yellow and background color to black and show you are outside the div if mouse is outside the div and message is shown inside the dive only and also change the color of the div to black and background color to white
      -->
-     <!-- <body id="b1">
+      <body id="b1">
         <div onmouseover="onOver()" onmouseout="OnMoveOut()" id="div1" class="c1">Move cursor here</div>
         <script>
         function onOver() {
@@ -36,13 +36,13 @@
          document.getElementById("div1").style.color="red";
         document.getElementById("b1").style.backgroundColor="yellow";
         }
-        </script> -->
+        </script> 
 
 
        <!-- Task30
         Write a JS Program using Events to count the inputs Enters by the user in alert after every input add
      -->
-     <!-- <div>
+      <div>
         <input id=" inp1  "type="text" onkeypress="countInput()"/>
     </div>
     
@@ -52,7 +52,7 @@
             count=count+1;
             alert("key is pressed"+ count +"times");
         }
-    </script> -->
+    </script> 
 
     <!-- Task31
     Write a JS Program to change the width of the div  to 100% height to 50%  and backgroundcolor to yellow and color to red using Events and change the width and height and baccol and color to black to normal if mouse is out -->
