--- a/Session5.html
+++ b/Session5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakshi Munde session5 Task</title>
+    <title>Sakshi Munde Session5 Task</title>
 </head>
 
 <body>
