--- a/session2.html
+++ b/session2.html
@@ -19,18 +19,19 @@
         //-- alert 
         //-- promt, confirm (show this all in innerHTML) "
 
-    //let person = prompt("Please enter your name");
-      //  if (person != null) {
-          //  document.getElementById("p").innerHTML =
-           //     "Hello " + person + "! How are you today?";
-        //} 
+      let person = prompt("Please enter your name");
+      if (person != null) {
+      document.getElementById("p").innerHTML =
+       "Hello " + person + "! How are you today?";
+       } 
 
 
         //Task4
 
         // Write a program in JavaScript and use backticks to create a multi-line string. and display the result
-       // let a=`There are six basic data types in JavaScript which can be divided into three main categories`;
-        //document.getElementById("p").innerHTML = a;
+      
+        let a=`There are six basic data types in JavaScript which can be divided into three main categories`;
+        document.getElementById("p").innerHTML = a;
 
     </script>
 </body>
