--- a/session6.html
+++ b/session6.html
@@ -9,22 +9,23 @@
 </head>
 
 <body>
-    <!-- <script>
-     Task 18
+
+<!--      Task 18 
     Write a JS program to Create a function called addNumbers that takes two numbers as parameters and returns the sum
     of the two numbers. -->
-
+   
+    <script>
     function addNumber(a,b){
     let c = a + b;
     document.write("The addition of a and b is :-"+c);
     }
-
-    </script> -->
-    <!-- <script>
-        Task19
+    </script> 
+   
+ 
+<!--         Task19 
         Write a JS program to Create a function called isEven that takes a number as a parameter and returns true if the
         number is even, and false otherwise. -->
-
+    <script>
     function isEven(a){
     if(a % 2 == 0){
     document.write("Number is even");
@@ -33,13 +34,15 @@
     document.write("The number is odd");
     }
     }
-
     </script> 
-    <script>
+   
+  
         <!-- Task20
         Write a JS program to Create a function called calculateAverage that takes 5 input number from as a parameter and
         returns the average value of the numbers. -->
-     function marks() {
+   
+    <script>
+        function marks() {
             var a = prompt("Enter sub1 marks out of 80");
             var b = prompt("Enter sub2 marks out of 80");
             var c = prompt("Enter sub3 marks out of 80");
@@ -61,15 +64,16 @@
             document.write("Percentage is:", percentage);
         }
         marks(); 
-
     </script>
+  
     <!-- Task 21
     Write a JS program to create a function that will take 5 subjects marks as an input (out of 80) and using call back
     function print the percentage of student get
     And also check the grade of the student if student get 70 and above print “A Grade : with percentage ” if student
     will get above 50 and below 70 print “B Grade” and else print Fail. -->
    
-    <!-- marks();
+    <script>
+     marks();
 
     function marks() {
         var a = prompt("Enter sub1 marks out of 80");
@@ -98,11 +102,8 @@
         }
         document.write("Percentage is:",percentage);
     }
-    
+     </script>
 
- -->
-
-
-</body>
+    </body>
 
 </html>
