--- a/session7.html
+++ b/session7.html
@@ -11,30 +11,32 @@
 <body>
     <!-- Task 22
     Write a JS program in which Change the Background color and color of a Paragraph using DOM element -->
-    <!-- 
+    
     <p id="1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet praesentium id iusto reiciendis ducimus
         sint
         adipisci similique exercitationem, voluptatum porro cupiditate doloremque accusamus quia labore iure quisquam!
-        Numquam, sint saepe!</p> -->
-    <!-- <script>
+        Numquam, sint saepe!</p> 
+     <script>
            document.getElementById("1").style.backgroundColor = "red";
-        </script>  -->
+        </script>  
 
     <!-- Task 23
     Write a JS program to change the color and Background of the Paragraph by taking the color and backgroundcolor name
     from User and change the style of Paragraph using DOM element. -->
 
-    <!-- let a= prompt("Enter color name")(red,green,blue,white,yellow);
+    <script>
+    let a= prompt("Enter color name")(red,green,blue,white,yellow);
     let b= prompt("Enter bgcolor name")(red,green,blue,white,yellow);
     document.getElementById("1").style.color ="+a+"
-    document.getElementById("1").style.backgroundColor ="+b+" -->
-
+    document.getElementById("1").style.backgroundColor ="+b+" 
+ </script>
+    
     <!-- Task 24
     Using JS DOM element change the color of the Paragraph are as follow :-
     Paragraph 1 :- BG:-Red, color:- Yellow
     Paragraph 2 :- BG:- Blue, color:- White
     Paragraph 3 :- BG:- Green, color:- Red -->
-<!-- 
+ 
     <p id="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias animi, rerum adipisci voluptatibus doloremque reiciendis maiores perspiciatis asperiores consequuntur et! Ab alias quaerat quae illum, sit odit fuga molestiae praesentium.</p>
     <p id="p2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque repudiandae, ipsum ipsa earum nostrum animi inventore voluptates? Hic, pariatur, nostrum magni ut, autem repellat ipsam totam cumque iure voluptates consequatur.</p>
     <p id="p3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea accusamus quia explicabo, quas beatae deserunt atque perferendis, rerum quae expedita molestias temporibus dolores rem quidem tempora similique quo mollitia omnis?</p>
@@ -46,11 +48,7 @@
         document.getElementById("p3").style.backgroundColor = "green";
         document.getElementById("p3").style.color = "red";
     </script>
- -->
-
-
-
-
+ 
 </body>
 
 </html>
