--- a/session15.html
+++ b/session15.html
@@ -17,36 +17,37 @@
     Qualification :
     Current Location :" -->
 
-    <!-- <script>
+    <script>
         const userDetails = {
-userName: "Sakshi Munde",
- age: 21,
-city: "Aurangabad,Maharashtra",
-qualification: "B.Tech Cse",
- currentLocation: "Aurangabad ,Maharashtra"
- };
-const body = document.body;
-const userNamePara = document.createElement("p");
-userNamePara.textContent = `User Name: ${userDetails.userName}`;
-const agePara = document.createElement("p");
-agePara.textContent = `Age: ${userDetails.age}`;
-const cityPara = document.createElement("p");
-cityPara.textContent = `City: ${userDetails.city}`;
-const qualificationPara = document.createElement("p");
-qualificationPara.textContent = `Qualification: ${userDetails.qualification}`;
-const locationPara = document.createElement("p");
-locationPara.textContent = `Current Location: ${userDetails.currentLocation}`;
-body.appendChild(userNamePara);
-body.appendChild(agePara);
-body.appendChild(cityPara);
-body.appendChild(qualificationPara);
-body.appendChild(locationPara);
-    </script> -->
+    userName: "Sakshi Munde",
+    age: 21,
+    city: "Aurangabad,Maharashtra",
+    qualification: "B.Tech Cse",
+    currentLocation: "Aurangabad ,Maharashtra"
+    };
+    const body = document.body;
+    const userNamePara = document.createElement("p");
+    userNamePara.textContent = `User Name: ${userDetails.userName}`;
+    const agePara = document.createElement("p");
+    agePara.textContent = `Age: ${userDetails.age}`;
+    const cityPara = document.createElement("p");
+   cityPara.textContent = `City: ${userDetails.city}`;
+   const qualificationPara = document.createElement("p");
+   qualificationPara.textContent = `Qualification: ${userDetails.qualification}`;
+   const locationPara = document.createElement("p");
+   locationPara.textContent = `Current Location: ${userDetails.currentLocation}`;
+   body.appendChild(userNamePara);
+   body.appendChild(agePara);
+   body.appendChild(cityPara);
+   body.appendChild(qualificationPara);
+   body.appendChild(locationPara);
+    </script>
 
 
     <!-- Task -->
     <!-- Print the FullName Using Object Method By taking Firstname and Lastname in Object -->
-    <!-- <script>
+    
+    <script>
         const userDetails = {
             firstName: "Sakshi",
             lastName: " Munde",
@@ -55,17 +56,17 @@ body.appendChild(locationPara);
             }
           };
           console.log(userDetails.getFullName());
-    </script> -->
+    </script> 
 
 
     <!-- Task -->
     <!-- Print The Area of Circle in Heading (2) when User Click on Button and calculate the Area using Object Methods by taking radius from User using Prompt.1 -->
 
-    <!-- <h2 id="1"></h2>
+     <h2 id="1"></h2>
     <script>
-   var r1=prompt("enter radius of circle:");
-   var r2=parseInt(r1);
-   var s={
+    var r1=prompt("enter radius of circle:");
+    var r2=parseInt(r1);
+    var s={
     pi:3.14,
     radius:r2,
     area:function(){
@@ -73,13 +74,13 @@ body.appendChild(locationPara);
     }
    }
    document.getElementById("1").innerHTML="Area of circle="+s.area();
-</script> -->
+   </script> 
 
 
     <!-- Task -->
     <!-- Using Accessor (Getter and Setter) Set the Value of Technology 2 by Getting from Technology 1 property  and set the property of Technology 3 by taking from user -->
 
-    <!-- <script>
+    <script>
     var tech3Value = prompt("Enter the value for technology3:");
     var technologyObject = {
         technology1: "JavaScript",
@@ -95,8 +96,6 @@ body.appendChild(locationPara);
       technologyObject.tech2 = technologyObject.technology1;
       technologyObject.tech3 = tech3Value;
       console.log(technologyObject);   
-</script> -->
-
+</script>
 </body>
-
 </html>
