--- a/session17.html
+++ b/session17.html
@@ -10,7 +10,7 @@
     <!-- Task -->
     <!-- Write a JS program to Calculate the area of a square using inheritance by taking side from user -->
     
-    <!-- <script>
+    <script>
     const side = parseFloat(prompt("Enter the side of the square:"));
     class Shape {
     constructor() {
@@ -28,14 +28,14 @@
   }
   const square = new Square(side);
   console.log(`The area of the square is: ${square.area}`);
-</script> -->
+</script> 
 
 
 
 <!-- Task -->
 <!-- Write a JS program to calculate the Average of the total marks using class Methods -->
 
-<!-- <script>
+<script>
 class Student {
     constructor(name, marks) {
       this.name = name;
@@ -55,13 +55,13 @@ class Student {
   const student = new Student("sakshi", [90, 85, 95, 80, 85]);
   console.log(`${student.name}'s total marks are: ${student.totalMarks}`);
   console.log(`${student.name}'s average marks are: ${student.averageMarks}`);
-</script> -->
+</script>
 
 
 
 <!-- Task -->
 <!-- Write a js program to print the Name of Different Students and the Average of all marks by taking Marks as an array Example as show in Below Image -->
-<!-- 
+
 <script>
 class Student {
     constructor(name, marks) {
@@ -92,7 +92,7 @@ class Student {
     console.log(`${students[i].name}'s average marks are: ${students[i].averageMarks}`);
   }
   console.log(`The average marks for all students are: ${averageMarks}`);
-</script> -->
+</script> 
 
 </body>
 </html>
