--- a/session18.html
+++ b/session18.html
@@ -9,17 +9,17 @@
 <body>
     <!-- Task -->
     <!-- Write a Js Program To Change The color of the Paragraph After 2 sec of Interval using SetTimeout -->
-    <!-- <script>
+    <script>
         setTimeout(function() {
             var paragraph = document.getElementById("my-paragraph");
             paragraph.style.color = "red";
           }, 2000);
           
-    </script> -->
+    </script>
 
     <!-- Task -->
     <!-- Write A Js Program To take Task As an Input from User and Update that Task on Document and after the 5 sec again take the input from user that if user has completed its Task or not If User Enter Yes the print ”Promise Fulfilled” in Green color and if no Then Print “Promise Un Fulfilled” in red Color -->
-    <!-- <script>
+     <script>
     var taskInput = document.getElementById("task-input");
     var taskOutput = document.getElementById("task-output");
     function updateTask() {
@@ -40,11 +40,11 @@
     }
     updateTask();
     setTimeout(checkCompletion, 5000);
-</script> -->
+</script> 
 
 <!-- Task -->
 <!-- Write a js Program to change Continuously color of the Star after Every 1 sec on button click -->
-<!-- <script>
+<script>
 var star = document.getElementById("my-star");
 var button = document.getElementById("color-button");
 var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
@@ -62,6 +62,6 @@ button.addEventListener("click", function() {
     clearInterval(intervalId);
   }, 5000);
 });
-</script> -->
+</script> 
 </body>
 </html>
