--- a/session16.html
+++ b/session16.html
@@ -10,22 +10,20 @@
   <body align="center">
     <!-- Task -->
     <!-- Print The Random Number on Document Between 40 to 55 Using Maths Object on Button Click. -->
-    <!-- <h2>Random Number Generator</h2>
+    <h2>Random Number Generator</h2>
     <button onclick="generateRandomNumber()">Click To Generate Random Number</button>
     <p id="random-number"></p>
-
     <script>
       function generateRandomNumber() {
         var randomNumber = Math.floor(Math.random() * 16) + 40;
         document.getElementById("random-number").innerHTML = "Random number: " + randomNumber;
       }
-    </script> -->
+    </script> 
 
     <!-- Task -->
     <!-- Print the Maximum number and Minimum number from “3, 55, 60, 90, 100” and print the Pow of Maximum number and minimum number by 2 and also print the Square root of the Max number on Button Click. -->
-        <!-- <button onclick="calculate()">Calculate</button>
+        <button onclick="calculate()">Calculate</button>
         <p id="result"></p>
-    
         <script>
           function calculate() {
             var numbers = [3, 55, 60, 90, 100];
@@ -34,7 +32,6 @@
             var maxPower = Math.pow(maxNumber, 2);
             var minPower = Math.pow(minNumber, 2);
             var maxSqrt = Math.sqrt(maxNumber);
-    
             document.getElementById("result").innerHTML =
              "Max number: " + maxNumber + "<br>" +
              "Min number: " + minNumber + "<br>" +
@@ -42,12 +39,12 @@
             "Min number squared: " + minPower + "<br>" +
             "Square root of max number: " + maxSqrt;
           }
-        </script> -->
+        </script> 
 
 
         <!-- Task -->
         <!-- Print the Total Number of Leaves by taking Leave starting Date and End Date From User -->
-    <!-- <label for="start-date">Start Date:</label>
+    <label for="start-date">Start Date:</label>
     <input type="date" id="start-date">
     <br>
     <label for="end-date">End Date:</label>
@@ -63,7 +60,7 @@
 
         document.getElementById("result").innerHTML = "Total number of leaves: " + totalDays;
       }
-    </script> -->
+    </script> 
 
     <!-- Task -->
     <!-- Print All Cookies Of Twitter.com in Console -->
@@ -71,24 +68,24 @@
 
     <!-- Task -->
     <!-- Add a local storage with key = “Name” and value = “Iqra” and replace the Value by “Technology” -->
-    <!-- <button onclick="Click()">Click Button</button>
+    <button onclick="Click()">Click Button</button>
     <script>
     localStorage.setItem("Name", "Iqra");
     function Click(){
         localStorage.setItem("Name", "Technology");
     }
-</script> -->
+</script> 
 
 <!-- Task -->
 <!-- "Add the Three Session Storage Key Value called as
 1. Name = “Javascript”
 2: Type = “Programming”
 3: status = “Learning”" -->
-<!-- <script>
+<script>
 sessionStorage.setItem("Name", "Javascript");
 sessionStorage.setItem("Type", "Programming");
 sessionStorage.setItem("status", "Learning");
-</script> -->
+</script> 
 </body>
 </html>
 <html>
