--- a/session18.html
+++ b/session18.html
@@ -5,63 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+/*       p {
+    font-size: 24px;
+    color: black;
+    } 
+ */
+
+/*      #message {
+      font-size: 24px;
+    }
+    .green {
+      color: green;
+    }
+    .red {
+      color: red;
+    } 
+
+ */
+/*     .star {
+      width: 100px;
+      height: 100px;
+      position: relative;
+      display: inline-block;
+      margin: 10px;
+    }
+    .star:before,
+    .star:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 0;
+      border-right: 50px solid transparent;
+      border-bottom: 35px solid yellow;
+      border-left: 50px solid transparent;
+      transform: rotate(35deg);
+    }
+    .star:after {
+      transform: rotate(-35deg);
+      border-bottom: 35px solid yellow;
+    } */
+  </style>
 </head>
 <body>
     <!-- Task -->
     <!-- Write a Js Program To Change The color of the Paragraph After 2 sec of Interval using SetTimeout -->
-    <script>
-        setTimeout(function() {
-            var paragraph = document.getElementById("my-paragraph");
-            paragraph.style.color = "red";
-          }, 2000);
-          
-    </script>
+    <p id="my-paragraph">I am Sakshi Suhas Munde
+    I m pursuing B.tech in Marathwada Institute of Technology, Aurangabad
+    I have completed my schooling  from sharada mandir girls high school ,aurangabad
+    My strength is a self-motivated, a positive thinker & a hard worker
+    I have 4 members in my family including me.
+    My hobbies are watching serials/movies, listening to music,cooking,Swimming,drawing,interacting with new people
+    My short-term goal is to get a job in a well-reputed company like yours.
+    My long-term goal is to get a reputed position in the company where I can build my career & help the organization.
+    That's all about myself</p>
+  <script>
+    const paragraph = document.getElementById("my-paragraph");
+    function changeColor() {
+      paragraph.style.color = "red";
+    }
+    setTimeout(changeColor, 2000);
+  </script>
 
     <!-- Task -->
     <!-- Write A Js Program To take Task As an Input from User and Update that Task on Document and after the 5 sec again take the input from user that if user has completed its Task or not If User Enter Yes the print ”Promise Fulfilled” in Green color and if no Then Print “Promise Un Fulfilled” in red Color -->
-     <script>
-    var taskInput = document.getElementById("task-input");
-    var taskOutput = document.getElementById("task-output");
-    function updateTask() {
-      taskOutput.innerText = "Task: " + taskInput.value;
-    }
-    function checkCompletion() {
-      var completed = prompt("Have you completed the task? Enter 'yes' or 'no'.");
-      if (completed === "yes") {
-        taskOutput.innerText += " - Promise Fulfilled";
-        taskOutput.style.color = "green";
-      } else if (completed === "no") {
-        taskOutput.innerText += " - Promise Unfulfilled";
-        taskOutput.style.color = "red";
-      } else {
-        alert("Invalid input. Please enter 'yes' or 'no'.");
-        checkCompletion();
-      }
-    }
-    updateTask();
-    setTimeout(checkCompletion, 5000);
-</script> 
+    <label for="task-input">Enter your task:</label>
+  <input type="text" id="task-input" />
+  <button onclick="updateTask()">Submit</button>
+  <div id="message"></div>
+  <script>
+function updateTask() {
+  const taskInput = document.getElementById("task-input");
+  const task = taskInput.value;
+  const taskDisplay = document.createElement("p");
+  taskDisplay.textContent = task;
+  document.body.appendChild(taskDisplay);
+  setTimeout(checkPromise, 5000);
+}
+function checkPromise() {
+  const isPromiseFulfilled = confirm("Have you completed your task?");
+  const message = document.getElementById("message");
+  if (isPromiseFulfilled) {
+    message.textContent = "Promise Fulfilled";
+    message.classList.add("green");
+  } else {
+    message.textContent = "Promise Unfulfilled";
+    message.classList.add("red");
+  }
+}
+</script>
+
 
 <!-- Task -->
 <!-- Write a js Program to change Continuously color of the Star after Every 1 sec on button click -->
-<script>
-var star = document.getElementById("my-star");
-var button = document.getElementById("color-button");
-var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
-var colorIndex = 0;
-function changeColor() {
-  star.style.color = colors[colorIndex];
-  colorIndex++;
-  if (colorIndex === colors.length) {
-    colorIndex = 0;
-  }
-}
-button.addEventListener("click", function() {
-  var intervalId = setInterval(changeColor, 1000);
-  setTimeout(function() {
-    clearInterval(intervalId);
-  }, 5000);
-});
-</script> 
+
 </body>
 </html>
