--- a/session16.html
+++ b/session16.html
@@ -64,6 +64,7 @@
 
     <!-- Task -->
     <!-- Print All Cookies Of Twitter.com in Console -->
+    <script>document.cookie</script>
 
 
     <!-- Task -->
