--- a/session20.html
+++ b/session20.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Task -->
     <!-- Write a JS Program to Take Mobile Number From User using Input Type Text and Validate the Input Using Regular Expression if User Enter Mobile Number Less than or Greater Than 10 then the Error message will be Print on Document and if User Enter Alphabet then also it will show Error on Document -->
-    <!-- <label for="mobile">Enter Mobile Number:</label>
+     <label for="mobile">Enter Mobile Number:</label>
 	<input type="text" id="mobile" name="mobile"><br><br>
 	<button onclick="validateMobile()">Submit</button>
 	<p id="error"></p>
@@ -33,11 +33,11 @@
 				alert("Valid Mobile Number Entered!");
 			}
 		}
-	</script> -->
+	</script> 
 
     <!-- Task -->
     <!-- Write a JS Program to Take Email ID From User using Input Type Text and Validate the Input Using Regular Expression if User Input is not contain the Following thing (“@”, “.com”, “gmail”, “Number”) which are available in Email and in a Proper way Then It will Show Error on Document -->
-    <!-- <label for="email">Enter Your Email Address:</label>
+     <label for="email">Enter Your Email Address:</label>
     <input type="text" id="email" name="email"><br><br>
     <button onclick="validateEmail()">Submit</button>
     <p id="error"></p>
@@ -59,11 +59,11 @@
                 alert("Valid email address entered!");
             }
         }
-    </script> -->
+    </script> 
 
     <!-- Task -->
     <!-- Write a JS Program To take Input From User as “I am Learning HTML” and Replace the HTML by Javascript using Regular Expression. -->
-    <!-- <label for="text">Enter some text:</label>
+     <label for="text">Enter some text:</label>
 	<input type="text" id="text" name="text"><br><br>
 	<button onclick="replaceHTML()">Replace "HTML" with "JavaScript"</button>
 	<p id="result"></p>
@@ -75,7 +75,7 @@
 			let result = text.replace(regex, "JavaScript");
 			document.getElementById("result").innerHTML = result;
 		}
-	</script> -->
+	</script> 
 </body>
 
 </html>
