--- a/session21.html
+++ b/session21.html
@@ -12,7 +12,7 @@
 -- Print the Output in console json form
 -- Print the Output in console in text form
 -- Print the Output in console using json" -->
-<!-- <script>
+ <script>
     let a=fetch("https://api.github.com/users");
     a.then((response)=>{
     console.log(response.status)
@@ -22,19 +22,19 @@
     }).then((value)=>{
         console.log(value)
     })
-</script> -->
+</script> 
 
 <!-- Task -->
 <!-- Record a video in which you have to go to W3school<html using BOM navigation go back till Google home page and then from home page go back to html page in W3School -->
-<!-- <script>
+<script>
     windows.history.back()
 windows.history.forword()
-</script> -->
+</script> 
 
 <!-- Task -->
 <!-- Practice the go method in history -->
-<!-- <script>
+<script>
     windows.history.go()
-</script> -->
+</script>
 </body>
 </html>
